# plotnine-tutorial-pydata-nyc-2024

./: .devcontainer.json  .gitignore  .setup.sh  00-setup.ipynb  01-goal.ipynb  09-great-tables.ipynb  README.md  anscombes-quartet.ipynb  exercises.ipynb  pyproject.toml  requirements.txt
