[project]
name = "plotnine-tutorial-pydata-nyc-2024"
version = "0.1.0"
description = "Plotnine Tutorial PyData NYC 2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-tables>=0.13.0",
    "jupyterlab>=4.2.5",
    "plotnine[all]>=0.13.6",
    "polars[numpy,pandas,pyarrow]>=1.11.0",
]
